<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/cardViewID"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="6dp"
        android:clickable="true"
        android:elevation="15dp"
        android:focusable="true"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="15dp">

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="nossafirma.com.br.meuapp.fragment.AddStoreFragment">

            <TextView
                android:id="@+id/tvIdStore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvIdAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <!--Store Name-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilStoreName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin">

                    <EditText
                        android:id="@+id/etStoreName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/store_name"
                        android:inputType="textCapSentences"
                        android:lines="1" />

                </android.support.design.widget.TextInputLayout>

                <!--Street Name-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilStreetName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:lines="1"
                    android:padding="@dimen/activity_horizontal_margin">

                    <EditText
                        android:id="@+id/etStreetName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:hint="@string/street_name"
                        android:inputType="textCapSentences"
                        android:lines="1" />

                </android.support.design.widget.TextInputLayout>

                <!--Complement-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilComplement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin">

                    <EditText
                        android:id="@+id/etComplement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:hint="@string/complement"
                        android:inputType="textCapSentences"
                        android:lines="1" />

                </android.support.design.widget.TextInputLayout>

                <!--Region Spinner-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilRegions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin">

                    <Spinner
                        android:id="@+id/spRegions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tvLatitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tvLongitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />

                <!--Beer Spinners-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilBeers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin">

                    <Spinner
                        android:id="@+id/spBeers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <!--Beer Value-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin">

                    <EditText
                        android:id="@+id/etValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:hint="@string/value"
                        android:inputType="numberDecimal" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/save" />

            </LinearLayout>

            <!--<include android:id="@+id/notelist" layout="@layout/activity_login" />-->
        </FrameLayout>
    </android.support.v7.widget.CardView>
</ScrollView>
